@@ -1743,7 +1743,7 @@ order (MRO) for bases """
             return b"hello"
         def empty_seq(self):
             return []
-        def zero(self):
+        def zero(self, other=None):
             return 0
         def complex_num(self):
             return 1j
@@ -1789,6 +1789,7 @@ order (MRO) for bases """
             ("__trunc__", int, zero, set(), {}),
             ("__ceil__", math.ceil, zero, set(), {}),
             ("__dir__", dir, empty_seq, set(), {}),
+            ("__round__", round, zero, set(), {}),
             ]
 
         class Checker(object):
